--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.20)
 project(ex2)
 
 set(CMAKE_CXX_STANDARD 11)
-add_executable(ex2 rankTreeTester.cpp hashTable.h UnionFind.h UnionFind.cpp RankTree.h wet2util.h rankTreeTester.cpp)
+#add_executable(ex2 rankTreeTester.cpp RankTree.h wet2util.h)
+add_executable(ex2 hashTable.h UnionFind.h UnionFind.cpp RankTree.h wet2util.h Player.cpp
+        Player.h Team.cpp Team.h worldcup23a2.cpp worldcup23a2.h)
 set_target_properties(ex2 PROPERTIES LINKER_LANGUAGE CXX)
 
 
